# ehallway

./: Caddyfile  Cargo.toml  LICENSE.md  README.md  index-9ec693563708060c.js  index-9ec693563708060c_bg.wasm  index.html  start-caddy.sh  tpt-update.sh
api/: Cargo.toml
api/src/: cull.rs  main.rs
api/src/src/: main.rs
api/templates/: base.html.tera.elc-template
ehall/: Cargo.toml  build.sh
ehall/src/: lib.rs
src/: main.rs
ui/: Cargo.toml
ui/src/: chance.rs  cull.rs  js.rs  main.rs  rankable.rs  ranking.rs  svg.rs
