[package]
name = "vhallway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_auth = { version = "0.4.0", features = ["tokio-postgres"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
rocket_http = "0.4.10"
serde_json = "1.0.79"
tokio = "1.17.0"
tokio-postgres = "0.7.5"
