[package]
name = "ehallway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.17", features = ["derive"] }
ehall = { version = "0.1.0", path = "../ehall" }
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_auth = { version = "0.4.0", features = ["tokio-postgres"] }
rocket_contrib = "0.4.10"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
rocket_http = "0.4.10"
serde = {version = "1.0.137", features = ["serde_derive"] }
serde_json = "1.0.79"
tokio = "1.17.0"
tokio-postgres = "0.7.5"
toml = "0.5.9"
