[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
gloo-utils = "0.1.3"
reqwasm = "0.5.0"
serde = { version = "1.0.137", features = ["derive"] }
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
yew = "0.19.3"
