[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
# ehall = { version = "0.1.0", path = "../ehall" }
getrandom = { version = "0.2.6", features = ["js"] }
gloo-net = { version = "0.2.0", features = ["http"] }
gloo-utils = "0.1.3"
js-sys = "0.3.57"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["sync", "rt"] }
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.57", features = ["console", "Document"] }
yew = "0.19.3"
